--- a/Guardian/Info.plist
+++ b/Guardian/Info.plist
@@ -34,6 +34,12 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Guardian</string>
+	<key>NSLocationUsageDescription</key>
+	<string>Guardian</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Guardian</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
